--- a/index.html
+++ b/index.html
@@ -5,48 +5,78 @@
   <title>Sean O'Halloran - CV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  
 </head>
 
 <body>
 
   <div class="page">
 
+    <!-- TOP BLUE BANNER: NAME + TITLE + SUMMARY -->
     <header class="topBanner">
       <h1 class="name">Sean O'Halloran</h1>
       <p class="title">IT Incident Management & Service Operations Specialist</p>
-    </header>
-     <img src="YOUR_IMAGE_FILE.png" class="topPhoto" alt="Profile photo">
-      <button id="printPdfBtn" class="printButton" type="button">
-    Click here for PDF
-  </button>
 
-    <main>
-
-      <!-- SUMMARY -->
       <section class="summarySection">
         <h2 class="summary">Brief summary</h2>
-        <p>Experienced IT professional with over 10 years in support, system 
-administration, and incident/problem management across industries including 
-retail, healthcare, media, and consulting. Skilled in cross-functional 
-coordination, root cause analysis, and service improvement under ITIL 
-framework.
-Fluent in Swedish and English, with a consistent track record of driving 
-stability, documentation, and customer satisfaction across enterprise 
-environments.</p>
+        <p>
+          Experienced IT professional with over 10 years in support, system
+          administration, and incident/problem management across industries including
+          retail, healthcare, media, and consulting. Skilled in cross-functional
+          coordination, root cause analysis, and service improvement under ITIL
+          framework. Fluent in Swedish and English, with a consistent track record of
+          driving stability, documentation, and customer satisfaction across enterprise
+          environments.
+        </p>
       </section>
+    </header>
 
-      <!-- RIGHT SIDEBAR AS ONE BOX -->
+    <!-- TOP-RIGHT PHOTO + PRINT BUTTON -->
+    <img src="YOUR_IMAGE_FILE.png" class="topPhoto" alt="Profile photo">
+
+    <button id="printPdfBtn" class="printButton" type="button">
+      Click here for PDF
+    </button>
+    <div class="techSkillsBox">
+  <h2>Technical Skills</h2>
+  <ul>
+    <li>Active Directory</li>
+    <li>Group Policies (GPO)</li>
+    <li>PowerShell</li>
+    <li>CMD</li>
+    <li>SQL Databases</li>
+    <li>VPN Configuration & Tunnels</li>
+    <li>Microsoft Exchange</li>
+    <li>Server Maintenance</li>
+    <li>Wireless AP Installation</li>
+    <li>Network Troubleshooting</li>
+    <li>Hardware Support</li>
+    <li>Technical Documentation</li>
+    <li>Ticketing Systems</li>
+    <li>Log Analysis</li>
+    <li>Windows OS Administration</li>
+    <li>Windows Server Basics</li>
+    <li>CRM System Administration (Quedro)</li>
+    <li>KPI & Reporting</li>
+    <li>Root Cause Analysis Tools</li>
+    <li>Jira Query Language (JQL)</li>
+    <li>JavaScript</li>
+    <li>Excel</li>
+  </ul>
+</div>
+
+    <!-- MAIN TWO-COLUMN GRID -->
+    <main>
+
+      <!-- RIGHT SIDEBAR AS ONE BOX (CONTACT + SKILLS + LANGUAGES) -->
       <div class="rightSidebar">
 
         <section class="contactSection">
           <h2 class="contactHeader">Contact details</h2>
-          <p>Address: 184 36, Stockholm Sweden</p>
+          <p>Address: Norrgårdshöjden 6, 184 36, Stockholm Sweden</p>
           <p>Phone: +46765601356</p>
           <p>E-mail: sean85ster@gmail.com</p>
         </section>
 
-        <!-- RIGHT SIDEBAR CONTENT (Skills + Languages) -->
         <section class="skillsSection">
           <h2 class="skillsHeader">Skills</h2>
           <ul>
@@ -124,19 +154,11 @@ environments.</p>
             <span class="title">IT Incident &amp; Problem Manager</span>
           </p>
           <ul>
-            <li>Led critical incident resolution, coordinated across 
-technical teams and vendors to minimize 
-downtime.</li>
-            <li>Conducted root cause analysis and 
-managed post-incident reviews to drive 
-long-term solutions.</li>
-            <li>Developed documentation, reporting 
-frameworks, and KPIs to track service 
-improvements.</li>
-            <li>Acted as liaison between IT, business 
-stakeholders, and senior management.</li>
-            <li>Developed ITSM Incident, Change and 
-Problem Management processes.</li>
+            <li>Led critical incident resolution, coordinated across technical teams and vendors to minimize downtime.</li>
+            <li>Conducted root cause analysis and managed post-incident reviews to drive long-term solutions.</li>
+            <li>Developed documentation, reporting frameworks, and KPIs to track service improvements.</li>
+            <li>Acted as liaison between IT, business stakeholders, and senior management.</li>
+            <li>Developed ITSM Incident, Change and Problem Management processes.</li>
           </ul>
         </section>
 
@@ -150,13 +172,8 @@ Problem Management processes.</li>
             <span class="title">Support Specialist / IT Technician</span>
           </p>
           <ul>
-            <li>Provided onsite support, first- and second-line 
-support, administration, infrastructure 
-development, and network patching.</li>
-            <li>Assisted in the infrastructure development of 
-Nabo's platform, including GPO development 
-and configuration file creation via PowerShell or 
-CMD.</li>
+            <li>Provided onsite support, first- and second-line support, administration, infrastructure development, and network patching.</li>
+            <li>Assisted in the infrastructure development of Nabo's platform, including GPO development and configuration file creation via PowerShell or CMD.</li>
           </ul>
         </section>
 
@@ -170,35 +187,20 @@ CMD.</li>
             <span class="title">1st Line/2nd Line/Onsite</span>
           </p>
           <ul>
-            <li>Supported Masimo Sweden: Provided IT support 
-for Masimo Sweden, a medical technology 
-company specializing in healthcare intensive 
-ward products.</li>
-            <li>Diagnosed and resolved network-related 
-problems to ensure seamless connectivity and 
-system performance.</li>
-            <li>Oversaw software license management to 
-ensure compliance and proper utilization of 
-resources.</li>
-            <li>Managed user accounts and access permissions
-to maintain security and efficiency.</li>
-            <li>Delivered IT security training sessions to educate 
-staff on best practices and safeguard company 
-data.</li>
-            <li>Created and updated technical 
-documentation for IT processes and procedures.</li>
-            <li>Set up and maintained VPN tunnels for remote 
-locations and external business partners to 
-ensure secure communication.</li>
+            <li>Supported Masimo Sweden: Provided IT support for Masimo Sweden, a medical technology company specializing in healthcare intensive ward products.</li>
+            <li>Diagnosed and resolved network-related problems to ensure seamless connectivity and system performance.</li>
+            <li>Oversaw software license management to ensure compliance and proper utilization of resources.</li>
+            <li>Managed user accounts and access permissions to maintain security and efficiency.</li>
+            <li>Delivered IT security training sessions to educate staff on best practices and safeguard company data.</li>
+            <li>Created and updated technical documentation for IT processes and procedures.</li>
+            <li>Set up and maintained VPN tunnels for remote locations and external business partners to ensure secure communication.</li>
           </ul>
         </section>
 
       </section><!-- /.workExperienceSection -->
 
       <!-- REMAINING WORK EXPERIENCE (FULL WIDTH) -->
-      <section class="workExperienceContinued fullWidthExperience">
-
-        <!-- QUEDRO -->
+     
         <section class="experienceItem">
           <h3 class="experienceHeader">IT Support/System Administrator — Quedro CRM Business Systems - Quedro</h3>
           <p class="experienceMeta">
@@ -221,6 +223,9 @@ ensure secure communication.</li>
           </ul>
         </section>
 
+         <section class="workExperienceContinued fullWidthExperience">
+        
+
         <section class="experienceItem">
           <h3 class="experienceHeader">IT Support/Helpdesk — Sveriges Radio</h3>
           <p class="experienceMeta">
@@ -231,21 +236,11 @@ ensure secure communication.</li>
             <span class="title">IT Support/Helpdesk</span>
           </p>
           <ul>
-            <li>Provided phone and email support for Sveriges 
-Radio employees, addressing a variety of 
-hardware and software issues.</li>
-            <li>Managed access rights and permissions in 
-Active Directory (AD), ensuring secure and 
-appropriate access for users.</li>
-            <li>Offered support for the Microsoft Office suite, 
-assisting users with application functionality and 
-troubleshooting.</li>
-            <li>Handled telephony issues, including setup, 
-maintenance, and troubleshooting of 
-communication systems.</li>
-            <li>Administered user accounts, including creation, 
-modification, and deactivation, ensuring 
-accurate and secure account management.</li>
+            <li>Provided phone and email support for Sveriges Radio employees, addressing a variety of hardware and software issues.</li>
+            <li>Managed access rights and permissions in Active Directory (AD), ensuring secure and appropriate access for users.</li>
+            <li>Offered support for the Microsoft Office suite, assisting users with application functionality and troubleshooting.</li>
+            <li>Handled telephony issues, including setup, maintenance, and troubleshooting of communication systems.</li>
+            <li>Administered user accounts, including creation, modification, and deactivation, ensuring accurate and secure account management.</li>
           </ul>
         </section>
 
@@ -259,21 +254,11 @@ accurate and secure account management.</li>
             <span class="title">IT Support/Onsite Technician</span>
           </p>
           <ul>
-            <li>Handled network communication tasks, ensuring
-seamless connectivity at Urban Deli's various 
-locations.</li>
-            <li>Installed and troubleshot wireless access points 
-(APs) to maintain reliable wireless coverage.</li>
-            <li>Performed cabling tasks, including setup and 
-maintenance, to support the store's technology 
-infrastructure.</li>
-            <li>Addressed and resolved technology issues 
-within the store environment, ensuring minimal 
-disruption to operations.</li>
-            <li>Participated in the development of IT 
-management processes, contributing to the 
-improvement of IT operations and support 
-strategies.</li>
+            <li>Handled network communication tasks, ensuring seamless connectivity at Urban Deli's various locations.</li>
+            <li>Installed and troubleshot wireless access points (APs) to maintain reliable wireless coverage.</li>
+            <li>Performed cabling tasks, including setup and maintenance, to support the store's technology infrastructure.</li>
+            <li>Addressed and resolved technology issues within the store environment, ensuring minimal disruption to operations.</li>
+            <li>Participated in the development of IT management processes, contributing to the improvement of IT operations and support strategies.</li>
           </ul>
         </section>
 
@@ -287,25 +272,13 @@ strategies.</li>
             <span class="title">Support Specialist 2nd/1st Line and Onsite Technician</span>
           </p>
           <ul>
-            <li>Provided first and second line support for 
-internal users, primarily within Swedish 
-operations.</li>
-            <li>Conducted continuous troubleshooting both 
-remotely and on-site to resolve user issues 
-efficiently.</li>
-            <li>Performed server maintenance to ensure 
-optimal performance and reliability.</li>
-            <li>Managed Microsoft Exchange, including setup, 
-maintenance, and troubleshooting of email 
-services.</li>
-            <li>Ordered hardware and managed inventory to 
-ensure the availability of necessary IT 
-equipment.</li>
-            <li>Supported conference room technology, 
-ensuring smooth operation for meetings and 
-events</li>
-            <li>Adhered to ITIL practices to enhance service 
-delivery and support processes.</li>
+            <li>Provided first and second line support for internal users, primarily within Swedish operations.</li>
+            <li>Conducted continuous troubleshooting both remotely and on-site to resolve user issues efficiently.</li>
+            <li>Performed server maintenance to ensure optimal performance and reliability.</li>
+            <li>Managed Microsoft Exchange, including setup, maintenance, and troubleshooting of email services.</li>
+            <li>Ordered hardware and managed inventory to ensure the availability of necessary IT equipment.</li>
+            <li>Supported conference room technology, ensuring smooth operation for meetings and events.</li>
+            <li>Adhered to ITIL practices to enhance service delivery and support processes.</li>
           </ul>
         </section>
 
@@ -319,9 +292,7 @@ delivery and support processes.</li>
             <span class="title">Order Processing</span>
           </p>
           <ul>
-            <li>Handled order booking and processing, 
-maintaining contact with suppliers, and 
-confirming orders.</li>
+            <li>Handled order booking and processing, maintaining contact with suppliers, and confirming orders.</li>
           </ul>
         </section>
 
@@ -335,9 +306,7 @@ confirming orders.</li>
             <span class="title">System Administrator/Support</span>
           </p>
           <ul>
-            <li>Managed and monitored Multicom Security's 
-alarm network and services, including network 
-administration and remote configuration.</li>
+            <li>Managed and monitored Multicom Security's alarm network and services, including network administration and remote configuration.</li>
           </ul>
         </section>
 
@@ -351,9 +320,7 @@ administration and remote configuration.</li>
             <span class="title">Assembler/Warehouse Worker</span>
           </p>
           <ul>
-            <li>Assembled communication cabinets for disaster 
-relief, involving practical assembly work along a 
-production line.</li>
+            <li>Assembled communication cabinets for disaster relief, involving practical assembly work along a production line.</li>
           </ul>
         </section>
 
@@ -367,8 +334,7 @@ production line.</li>
             <span class="title">Warehouse Worker/Forklift Driver</span>
           </p>
           <ul>
-            <li>Stayed home full-time with his partner's child 
-due to lack of preschool placement.</li>
+            <li>Stayed home full-time with his partner's child due to lack of preschool placement.</li>
           </ul>
         </section>
 
@@ -393,13 +359,13 @@ due to lack of preschool placement.</li>
             <span class="title">IT Technical Consultant</span>
           </p>
           <ul>
-            <li>Worked as an IT technical consultant for a major
-Scandinavian bank, handling phone and email 
-support for hardware and software issues.</li>
+            <li>Worked as an IT technical consultant for a major Scandinavian bank, handling phone and email support for hardware and software issues.</li>
           </ul>
         </section>
 
-      </section><!-- /.workExperienceContinued -->
+      </section><!-- /.workExperienceContinued --
+
+</div>
 
       <!-- EDUCATION -->
       <section class="educationSection">
@@ -417,6 +383,7 @@ support for hardware and software issues.</li>
     </main>
 
   </div><!-- /.page -->
-<script src="script.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
