--- a/index.html
+++ b/index.html
@@ -384,6 +384,10 @@
 
   </div><!-- /.page -->
 
+  <!-- html2pdf library (must come BEFORE script.js) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
+  <!-- Your custom logic -->
   <script src="script.js"></script>
 </body>
 </html>
